[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.23"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
solana-sdk = "1.17"
solana-client = "1.17"
anchor-client = "0.29.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
hex = "0.4"
